fix: changed align-self to w:100% • for some reason flex inside flex wouldn't stretch

--- a/src/styles/5-modules/_m-sidebar.scss
+++ b/src/styles/5-modules/_m-sidebar.scss
@@ -79,7 +79,7 @@
 // so it's important for the parent container to have
 //a full/fixed width
 
-.m-sidebar__skills-pod {
-    align-self: stretch;
+.m-sidebar__skills-container {
+    width: 100%;
     padding: sz(m) sz(mini);
 }
